frostwire (6.9.1) stable; urgency=high
 * jlibtorrent-1.2.12.0 update
 * Detects MozillaVPN
 * lt:fix loading of DHT node ID from previous session on startup
 * lt:use getrandom(), when available, and fall back to /dev/urandom
 * lt:fix uTP issue acking FIN packets
 * lt:validate HTTPS certificates by default (trackers and web seeds)
 * lt:load SSL certificates from windows system certificate store, to authenticate trackers
 * lt:introduce mitigation for Server Side Request Forgery in tracker and web seed URLs
 * lt:fix error handling for pool allocation failure
 * Windows build reverts to jdk-14

 -- FrostWire Team <contact@frostwire.com>  Thu, 14 Jan 2020 10:24:00 -0600

frostwire (6.8.10) stable; urgency=high
 * jlibtorrent-1.2.11.0 update
 * jaudiotagger 2.2.5 to 2.2.6 update
 * Telluride Cloud Video Downloader build 8
 * lt: upgraded to openssl 1.1.1l
 * Fixes issue with Telluride results and emojis in filenames
 * Fixes bug where transfer file detail actions would go blank when left clicked. (74291c004)
 * New File Transfer details popup menus: FIles > Explore, Play
 * lt: fix issue with moving the session object
 * lt: deprecate torrent_status::allocating. This state is no longer used
 * lt: fix bug creating torrents with symbolic links
 * lt: remove special case to save metadata in resume data unconditionally when added throught magnet link
 * lt: fix bugs in mutable-torrent support (reusing identical files from different torrents)
 * lt: fix incorrectly inlined move-assignment of file_storage
 * lt: add session::paused flag, and the ability to construct a session in paused mode
 * lt: fix session-pause causing tracker announces to fail
 * lt: fix peer-exchange flags bug
 * lt: allow saving resume data before metadata has been downloaded (for magnet links)
 * lt: record blocks in the disk queue as downloaded in the resume data
 * lt: fix bug in set_piece_deadline() when set in a zero-priority piece