@@ -1,6 +1,7 @@
 frostwire (6.9.1) stable; urgency=high
  * jlibtorrent-1.2.12.0 update
  * Detects MozillaVPN
+ * Soundcloud search fixed
  * lt:fix loading of DHT node ID from previous session on startup
  * lt:use getrandom(), when available, and fall back to /dev/urandom
  * lt:fix uTP issue acking FIN packets
@@ -10,7 +11,7 @@ frostwire (6.9.1) stable; urgency=high
  * lt:fix error handling for pool allocation failure
  * Windows build reverts to jdk-14
 
- -- FrostWire Team <contact@frostwire.com>  Thu, 14 Jan 2020 10:24:00 -0600
+ -- FrostWire Team <contact@frostwire.com>  Thu, 14 Jan 2020 18:47:00 -0600
 
 frostwire (6.8.10) stable; urgency=high
  * jlibtorrent-1.2.11.0 update
